# dramma

./: .gitignore  Cargo.toml  README.md  build-portable.sh  build.rs  deploy.sh  shell.nix
.github/workflows/: ci.yml  deploy.yml
src/: camera.rs  cashcode.rs  cashcode_db.rs  cctalk.rs  config.rs  diag_logger.rs  donation.rs  donation_log.rs  error.rs  funds.rs  home_assistant.rs  main.rs  retroarch.rs  sound.rs
ui/: autocomplete_line_edit.slint  confetti.slint  icons.slint  main_window.slint  virtual_keyboard.slint
ui/pages/: diagnostics.slint  diagnostics_auth.slint  donate.slint  home_assistant.slint  insert_coins.slint  insert_money.slint  logs.slint  main.slint
