[package]
name = "dramma"
version = "0.1.2"
edition = "2024"
build = "build.rs"
publish = false
license = "MIT"

[[bin]]
path = "src/main.rs"
name = "dramma"

[dependencies]
slint = { version = "1.14.1", features = ["renderer-skia"] }
serialport = "4.2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
isahc = { version = "1.7", features = ["json"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"


[build-dependencies]
slint-build = "1.14.1"
