[package]
name = "dramma"
version = "0.3.1"
edition = "2024"
build = "build.rs"
publish = false
license = "MIT"

[[bin]]
path = "src/main.rs"
name = "dramma"

[dependencies]
slint = { version = "1.14.1", features = ["renderer-skia"] }
serialport = "4.2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
isahc = { version = "1.7", features = ["json"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
cc_talk_core = { git = "https://github.com/Kosta-Git/cc-talk-rs", package = "cc_talk_core" }
cc_talk_tokio_host = { git = "https://github.com/Kosta-Git/cc-talk-rs", package = "cc_talk_tokio_host" }
cc_talk_host = { git = "https://github.com/Kosta-Git/cc-talk-rs", package = "cc_talk_host" }
tokio = { version = "1", features = ["rt", "time"] }
tokio-serial = "5"

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", features = ["input-v4l"] }

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }

[build-dependencies]
slint-build = "1.14.1"
